<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="@dimen/margin_screen_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivRegisterLogo"
            android:layout_width="@dimen/register_logo_size"
            android:layout_height="@dimen/register_logo_size"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvRegisterTitle"
            android:layout_marginTop="@dimen/margin_top_register_screen" />

        <TextView
            android:id="@+id/tvRegisterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivRegisterLogo"
            app:layout_constraintBottom_toTopOf="@id/tilRegisterEmail"
            android:text="@string/fill_in_the_fields"
            android:textSize="@dimen/register_title"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_top_register_title"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegisterEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_register_email_til"
            android:hint="@string/your_email_hint"
            app:layout_constraintTop_toBottomOf="@id/tvRegisterTitle"
            app:layout_constraintBottom_toTopOf="@id/tilRegisterPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconDrawable="@drawable/ic_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegisterPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_register_fields"
            android:hint="@string/hint_your_password"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tilRegisterEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tilConfirmPassword"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_register_fields"
            android:hint="@string/confirm_password_hint"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/tilRegisterPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btRegisterRegister"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btRegisterRegister"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_register_register_bt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilConfirmPassword"
            app:layout_constraintBottom_toTopOf="@id/btBackRegister"
            android:layout_marginTop="@dimen/margin_top_register_register_bt"
            android:layout_marginBottom="@dimen/margin_bottom_register_register_bt"
            android:text="@string/register_register_bt_text"
            android:textStyle="bold"
            android:textSize="@dimen/register_register_bt_text_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_green"/>

        <Button
            android:id="@+id/btBackRegister"
            android:layout_width="0dp"
            android:layout_height="@dimen/register_back_bt_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btRegisterRegister"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin_bottom_register_screen"
            android:layout_marginStart="@dimen/margin_sides_register_back_bt"
            android:layout_marginEnd="@dimen/margin_sides_register_back_bt"
            android:text="@string/return_bt_text"
            android:textSize="@dimen/register_return_bt_text_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_blue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>