<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="?actionBarSize"
            android:layout_margin="@dimen/margin_screen_default">

            <TextView
                android:id="@+id/tvSearchTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_title"
                android:layout_marginTop="@dimen/search_screen_margin_top"
                android:textSize="@dimen/search_title_text_size"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/tvSearchText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSearchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_text_margin_top"
                android:text="@string/search_text"
                android:textSize="@dimen/search_text_size"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@id/tilSelectRelatorio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSearchTitle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSelectRelatorio"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_select_relatorio"
                app:layout_constraintTop_toBottomOf="@id/tvSearchText"
                app:layout_constraintBottom_toTopOf="@id/btSearchSearch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconDrawable="@drawable/ic_location">

                <AutoCompleteTextView
                    android:id="@+id/actvSelectRelatorio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:hint="@string/actv_select_relatorio_hint"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btSearchSearch"
                android:layout_width="0dp"
                android:layout_height="@dimen/search_bt_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilSelectRelatorio"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/search_bt_margin_top"
                android:layout_marginBottom="@dimen/search_bt_margin_bottom"
                android:text="@string/search_bt"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/search_bt_text_size" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        app:labelVisibilityMode="labeled"/>

</androidx.constraintlayout.widget.ConstraintLayout>