<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_screen_default">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/list_card_elevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/list_card_padding">

            <TextView
                android:id="@+id/localidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/dataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_title_card"
                android:text="@string/list_data_label"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintTop_toBottomOf="@id/localidade"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_title_card"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintTop_toBottomOf="@id/localidade"
                app:layout_constraintStart_toEndOf="@id/dataLabel" />

            <TextView
                android:id="@+id/temperaturaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_temperatura_label"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dataLabel" />

            <TextView
                android:id="@+id/temperatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toEndOf="@id/temperaturaLabel"
                app:layout_constraintTop_toBottomOf="@id/data" />

            <TextView
                android:id="@+id/phLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_ph_label"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/temperaturaLabel" />

            <TextView
                android:id="@+id/ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toEndOf="@id/phLabel"
                app:layout_constraintTop_toBottomOf="@id/temperatura" />

            <TextView
                android:id="@+id/oxigenioDissolvidoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_oxigenio_label"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ph" />

            <TextView
                android:id="@+id/oxigenioDissolvido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toEndOf="@id/oxigenioDissolvidoLabel"
                app:layout_constraintTop_toBottomOf="@id/ph" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>